[tool.poetry]
name = "event-driven"
version = "0.1.0"
description = ""
authors = ["Joshua Magady <josh.magady@gmail.com>"]
readme = "README.md"
packages = [{include = "event_driven"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
